- fix bug: note marker incorrectly align to the bottom of note text, due to nested span.    fixed by set the vertical align of the nested span to top  - bump version

--- a/src/index.styl
+++ b/src/index.styl
@@ -23,3 +23,5 @@ span[ld~=editable], .editable
   .note
     display: list-item
     list-style-type: disc
+    span
+      vertical-align: top
